28 - refactoring signin approach, codestyle fixs