@@ -5,6 +5,7 @@ import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
@@ -14,7 +15,6 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static payments.duo.utils.Constants.TOKEN_DECLARATION_IS_WRONG;
 import static payments.duo.utils.Constants.TOKEN_NOT_FOUND;
@@ -27,12 +27,12 @@ public class JwtTokenProvider {
     @Value("${jwt.token.expired}")
     private long expireTime;
 
-    public String createToken(JwtUser jwtUser) {
+    public String createToken(Authentication authenticate) {
         Algorithm algorithm = Algorithm.HMAC256(secret.getBytes());
         return JWT.create()
-                .withSubject(jwtUser.getUsername())
+                .withSubject(authenticate.getName())
                 .withExpiresAt(new Date(System.currentTimeMillis() + expireTime))
-                .withClaim("roles", getRoleNamesFromAuthorities(jwtUser))
+                .withClaim("roles", getRoleNamesFromAuthorities(authenticate))
                 .sign(algorithm);
     }
 
@@ -44,15 +44,17 @@ public class JwtTokenProvider {
         return verifier.verify(token);
     }
 
-    public List<String> getRoleNamesFromAuthorities(JwtUser user) {
-        return user.getAuthorities().stream()
+    public List<String> getRoleNamesFromAuthorities(Authentication authenticate) {
+        return authenticate.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<GrantedAuthority> getAuthoritiesFromToken(DecodedJWT decodedJWT) {
+    public List<SimpleGrantedAuthority> getAuthoritiesFromToken(DecodedJWT decodedJWT) {
         String[] roles = decodedJWT.getClaim("roles").asArray(String.class);
-        return Arrays.stream(roles).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return Arrays.stream(roles)
+                .map(SimpleGrantedAuthority::new)
+                .toList();
     }
 
     private void authHeaderCheck(String authHeader) {
